--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -5,3 +5,4 @@ project(rushb_modules VERSION 1.0 DESCRIPTION "Modules for RushB")
 add_subdirectory(controller)
 add_subdirectory(zmqpipeline)
 add_subdirectory(videosub)
+add_subdirectory(videoplayer)
