--- a/modules/videosub/CMakeLists.txt
+++ b/modules/videosub/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16.3)
 
-project(VideoSub VERSION 0.2 DESCRIPTION "RushB VideoSub module")
+project(VideoSub VERSION 1.0 DESCRIPTION "RushB VideoSub module")
 
 find_package (Threads)
 
@@ -28,10 +28,15 @@ target_include_directories(VideoSub PRIVATE .
     /usr/lib/x86_64-linux-gnu/glib-2.0/include
 )
 
+link_directories(
+    /usr/local/lib
+)
+
 target_link_libraries(VideoSub
+    Threads::Threads
     -lgstreamer-1.0
     -lgobject-2.0
     -lglib-2.0
     -lgstapp-1.0
-    Threads::Threads
+
 )
