added video pub module

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(controller)
 add_subdirectory(zmqpipeline)
 add_subdirectory(videosub)
 add_subdirectory(videoplayer)
+add_subdirectory(videopub)
