added arduino link module

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(zmqpipeline)
 add_subdirectory(videosub)
 add_subdirectory(videoplayer)
 add_subdirectory(videopub)
+add_subdirectory(inolink)
