replaced logutils with log class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_executable(ControlCenter .
     src/Main.cpp
     src/ModuleHandler.cpp
     src/SignalHandler.cpp
-)
+        src/Logger.cpp)
 
 set_target_properties(ControlCenter PROPERTIES
     VERSION ${PROJECT_VERSION}
@@ -39,8 +39,8 @@ target_link_libraries(ControlCenter
 add_custom_command( TARGET ControlCenter POST_BUILD
         COMMENT echo "Setting up..."
         COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/avail_modules
-        COMMAND touch ${CMAKE_CURRENT_BINARY_DIR}/avail_modules/README.md
-        COMMAND echo "Place your build modules in this directory" >> ${CMAKE_CURRENT_BINARY_DIR}/avail_modules/README.md
+        COMMAND touch ${CMAKE_CURRENT_BINARY_DIR}/README.md
+        COMMAND echo "Place your modules in the avail_modules directory" >> ${CMAKE_CURRENT_BINARY_DIR}/README.md
         COMMAND ${CMAKE_COMMAND} -E copy
                 ${CMAKE_SOURCE_DIR}/resources/ModuleConfig.xml
                 ${CMAKE_CURRENT_BINARY_DIR}/ModuleConfig.xml
