fix wrong option name for videosub

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -16,7 +16,7 @@ endif()
 if(BUILD_ZMQPIPELINE)
     add_subdirectory(zmqpipeline)
 endif()
-if(VIDEO_SUB)
+if(BUILD_VIDEOSUB)
     add_subdirectory(videosub)
 endif()
 if(BUILD_VIDEOPUB)
