moved example module dir to example modules

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16.3)
 
 project(rushb_modules VERSION 1.0 DESCRIPTION "Modules for RushB")
 
+option(BUILD_EXAMPLE_MODULES "Building Example Modules" ON)
 option(BUILD_CONTROLLER "Building Controller Module" ON)
 option(BUILD_ZMQPIPELINE "Building ZMQ Pipeline Module" ON)
 option(BUILD_VIDEOPUB "Building Video Publisher Module" ON)
@@ -9,6 +10,10 @@ option(BUILD_VIDEOSUB "Building Video Subscriber Module" ON)
 option(BUILD_VIDEOPLAYER "Building Video Player Module" ON)
 option(BUILD_OBJECTDETECTOR "Building Object Detection Module" ON)
 option(BUILD_INOLINK "Building Inolink Module" ON)
+
+if(BUILD_EXAMPLE_MODULES)
+    add_subdirectory(example-modules)
+endif()
 
 if(BUILD_CONTROLLER)
     add_subdirectory(controller)
