added object detection library with opencv dnn support

--- a/modules/objectdetector/CMakeLists.txt
+++ b/modules/objectdetector/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16.3)
 
-project(ObjectDetector VERSION 1.0 DESCRIPTION "RushB ObjectDetector module")
+project(ObjectDetector VERSION 2.0 DESCRIPTION "RushB ObjectDetector module")
 
 find_package(TensorflowCC REQUIRED)
 find_package(OpenCV REQUIRED)
@@ -13,9 +13,12 @@ set(CMAKE_CXX_FLAGS
 
 set(CONTROL_CENTER_DIR "../../")
 set(MODULE_INTERFACE_DIR ${CONTROL_CENTER_DIR}/include)
+set(DETECTION_LIB_DIR "detection-lib")
 
 add_library(ObjectDetector SHARED .
     src/ObjectDetector.cpp
+    ${DETECTION_LIB_DIR}/src/DnnObjectDetector.cpp
+    ${DETECTION_LIB_DIR}/src/TfObjectDetector.cpp
     ${CONTROL_CENTER_DIR}/src/Logger.cpp
 )
 
@@ -26,8 +29,13 @@ set_target_properties(ObjectDetector PROPERTIES
 
 target_include_directories(ObjectDetector PRIVATE .
     include
+    ${DETECTION_LIB_DIR}/include
     ${MODULE_INTERFACE_DIR}
     ${OpenCV_INCLUDE_DIRS}
+
+    # OpenCV Contrib modules not automatically being added
+    # by OpenCV_INCLUDE_DIRS
+    /usr/local/include/opencv4/opencv2/
 )
 
 target_link_libraries( ObjectDetector
